--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sanity/vision": "^3.0.0",
+    "styled-components": "^5.2.0",
     "@headlessui/react": "^1.7.12",
     "@heroicons/react": "^2.0.16",
     "@tailwindcss/forms": "^0.5.3",
@@ -21,9 +23,11 @@
     "next-sanity": "^4.1.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sanity": "^3.5.1",
     "typescript": "4.9.5"
   },
   "devDependencies": {
+    "@sanity/eslint-config-studio": "^2.0.1",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
     "prettier": "^2.8.4",
