--- a/package.json
+++ b/package.json
@@ -9,10 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@sanity/vision": "^3.0.0",
-    "styled-components": "^5.2.0",
     "@headlessui/react": "^1.7.12",
     "@heroicons/react": "^2.0.16",
+    "@sanity/vision": "^3.0.0",
     "@tailwindcss/forms": "^0.5.3",
     "@types/node": "18.14.4",
     "@types/react": "18.0.28",
@@ -24,11 +23,13 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sanity": "^3.5.1",
+    "styled-components": "^5.2.0",
     "typescript": "4.9.5"
   },
   "devDependencies": {
     "@sanity/eslint-config-studio": "^2.0.1",
     "autoprefixer": "^10.4.13",
+    "eslint-config-prettier": "^8.7.0",
     "postcss": "^8.4.21",
     "prettier": "^2.8.4",
     "prettier-plugin-tailwindcss": "^0.2.4",
