--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "eslint-config-next": "13.2.3",
     "next": "13.2.3",
     "next-sanity": "^4.1.5",
+    "nodemailer": "^6.9.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.10.1",
     "sanity": "^3.5.1",
     "styled-components": "^5.2.0",
     "typescript": "4.9.5"
