--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "devDependencies": {
     "@sanity/eslint-config-studio": "^2.0.1",
+    "@types/nodemailer": "^6.4.9",
     "autoprefixer": "^10.4.13",
     "eslint-config-prettier": "^8.7.0",
     "postcss": "^8.4.21",
