--- a/package.json
+++ b/package.json
@@ -19,11 +19,15 @@
     "embla-carousel-react": "^8.0.0-rc11",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
-    "next": "13.2.3",
+    "i18next": "^23.4.4",
+    "next": "^13.5.6",
+    "next-i18next": "^14.0.0",
     "next-sanity": "^4.1.5",
+    "next-translate": "^2.6.2",
     "nodemailer": "^6.9.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-i18next": "^13.1.2",
     "react-icons": "^4.10.1",
     "sanity": "^3.5.1",
     "sharp": "^0.32.5",
@@ -35,6 +39,7 @@
     "@types/nodemailer": "^6.4.9",
     "autoprefixer": "^10.4.13",
     "eslint-config-prettier": "^8.7.0",
+    "next-translate-plugin": "^2.6.2",
     "postcss": "^8.4.21",
     "prettier": "^2.8.4",
     "prettier-plugin-tailwindcss": "^0.2.4",
