--- a/package.json
+++ b/package.json
@@ -11,15 +11,19 @@
   "dependencies": {
     "@headlessui/react": "^1.7.12",
     "@heroicons/react": "^2.0.16",
+    "@radix-ui/react-navigation-menu": "^1.1.4",
     "@sanity/vision": "^3.0.0",
     "@tailwindcss/forms": "^0.5.3",
     "@types/node": "18.14.4",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
     "embla-carousel-react": "^8.0.0-rc11",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
     "i18next": "^23.4.4",
+    "lucide-react": "^0.302.0",
     "next": "^13.5.6",
     "next-i18next": "^14.0.0",
     "next-sanity": "^4.1.5",
@@ -32,6 +36,8 @@
     "sanity": "^3.5.1",
     "sharp": "^0.32.5",
     "styled-components": "^5.2.0",
+    "tailwind-merge": "^2.2.0",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "4.9.5"
   },
   "devDependencies": {
@@ -43,6 +49,6 @@
     "postcss": "^8.4.21",
     "prettier": "^2.8.4",
     "prettier-plugin-tailwindcss": "^0.2.4",
-    "tailwindcss": "^3.2.7"
+    "tailwindcss": "^3.4.0"
   }
 }
