--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
   "dependencies": {
     "@headlessui/react": "^1.7.12",
     "@heroicons/react": "^2.0.16",
+    "@portabletext/react": "^3.0.11",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-navigation-menu": "^1.1.4",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^3.0.0",
     "@tailwindcss/forms": "^0.5.3",
     "@types/node": "18.14.4",
@@ -23,6 +27,7 @@
     "embla-carousel-react": "^8.0.0-rc11",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
+    "groq": "^3.23.4",
     "i18next": "^23.4.4",
     "lucide-react": "^0.302.0",
     "next": "^13.5.6",
@@ -34,12 +39,14 @@
     "react-dom": "18.2.0",
     "react-i18next": "^13.1.2",
     "react-icons": "^4.10.1",
+    "react-photo-album": "^2.3.0",
     "sanity": "^3.5.1",
     "sharp": "^0.32.5",
     "styled-components": "^5.2.0",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "4.9.5"
+    "typescript": "4.9.5",
+    "yet-another-react-lightbox": "^3.15.6"
   },
   "devDependencies": {
     "@sanity/eslint-config-studio": "^2.0.1",
